# main_practicPC

./: CMakeLists.txt
src/: common.h  errfile.cpp  leetcodetest.cpp  tabs.cpp  ttt.txt
src/algorithms/: countsort.cpp  qucksort.cpp
src/raii/: smartarray.cpp
src/smartptr/: fix.cpp  myuniqueptr.cpp  uniq.cpp
src/stl/: count_simv.cpp  delete_dubles.cpp  doubles.cpp  myvector.cpp  printcont.cpp
src/templates/: func.cpp  functor.cpp  templateclass.cpp
